Fixed Lazy loading for pages, some layout issues

--- a/src/Components/Work/Work.css
+++ b/src/Components/Work/Work.css
@@ -4,9 +4,9 @@
         box-shadow: 26px 26px 55px #aaaaaa,
             -26px -26px 55px #ffffff;
             padding: 100px 0px;
-            display: flex;
+            /* display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: center; */
             max-width: 1600px;
          
 }
